concord_macros/tests/dsl/fail/fail_policies_invalid_item.rs
use concord_macros::api;

api! {
    client BadPoliciesApi {
        base "https://example.com"

        policies {
            secret token: String
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
