concord_macros/tests/dsl/fail/fail_policies_invalid_item.stderr
error: invalid item in policies block; expected retry, cache, rate_limit, or observe
 --> tests/dsl/fail/fail_policies_invalid_item.rs:8:13
  |
8 |             secret token: String
  |             ^^^^^^
